<resources>
    <string name="app_name">SmartDrone</string>
    <string name="simulationButtonText_main">Sim</string>
    <string name="noteText">inactive</string>
    <string name="activeKeyString">Active</string>

    <string name="expirationText" />
    <string name="noteTimerLabel">Note Timer</string>
    <string name="keyTimerText" />
    <string name="keyTimerLabel">Key Timer</string>
    <string name="noteLengthRequirementLabel">Note Length Filter</string>
    <string name="noteLengthRequirementText" />
    <string name="userModeString" />
    <string name="userModeLabel">User Mode</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note_length_filter_key">note_length_filter</string>
    <string name="note_length_filter_title">Note Length Filter</string>
    <string name="note_length_filter_summary">Select the length for the note filter.</string>
    <string name="active_key_sensitivity">active_key_sensitivity</string>
    <string name="active_key_sensitivity_summary">Sensitivity of key change detection.</string>
    <string name="active_key_sensitivity_title">Active Key Sensitivity</string>
    <string name="active_key_default">Listening</string>
    <string name="active_key_button">Start</string>
    <string name="user_mode_summary">Mode for drone.</string>
    <string name="user_mode_title">Mode</string>
    <string name="root_bass_switch_text">Play Root</string>
    <string name="mode_text_title">Mode</string>
    <string name="user_plugin_title">Plugin</string>
    <string name="user_voicing_label">Voicing</string>
    <string name="new_voicing">New Voicing</string>
    <string name="voicing_name">Voicing Name</string>
    <string name="about_button">about_button</string>

    <!-- AboutActivity -->

    <!-- Version -->
    <string name="version_heading">Version</string>
    <string name="version_year">Convergence Lab, 2019</string>
    <!-- About SmartDrone -->
    <string name="about_heading">\nAbout SmartDrone</string>
    <string name="about_description">
        SmartDrone was created to improve musicians ability hear chord-scale relationships.
        \n\nThis app was developed by Travis MacDonald as part of a research assistant position for Convergence Lab.
        \n\nConvergence Lab is a funded research program established by James Hughes Ph.D., assistant professor at St. Francis Xavier University.
        \n\nArtwork created by Matea Drljepan.\n

    </string>
    <!-- Libraries -->
    <string name="libraries_heading">Libraries</string>
    <string name="libraries_tarsosdsp"><a href="https://github.com/JorenSix/TarsosDSP">TarsosDSP</a> for real time audio processing.</string>
    <string name="libraries_mididriver"><a href="https://github.com/billthefarmer/mididriver">MidiDriver</a> for midi synthesis.\n</string>
    <string name="libraries_description">This app was made possible by the following libraries:</string>

    <!-- How to Use -->
    <string name="manual_heading">How to Use</string>
    <string name="manual_summary">
        This app is best used for practicing static harmony (scales, modal music).
        (Best used with headphones, other wise the app may receive its own output as input.)
    </string>
    <string name="manual_demovideo">
        \n<a href="https://www.youtube.com/watch?v=8_woyE8PgA8&amp;t=">Demonstration Video</a>
    </string>
    <string name="manual_steps">
        \n1) Press <b>START</b> on the main screen and place your phone\'s microphone by your instrument\'s output.
        \n2) Play a scale until SmartDrone recognizes what key you are in.
        \n3) Change keys and SmartDrone will hear it.
    </string>
    <string name="manual_keydelay">
        \nThe delay in key change allows for users to play passing tones without changing the key.
        This can adjusted in the settings under <b>Active Key Sensitivity</b>. A higher sensitivity makes
        quicker changes with less accuracy, while a lower sensitivity makes fewer changes with more accuracy.
    </string>
    <string name="manual_notefilter">
        \nThe <b>Note Length Filter</b> sets how long a note must be heard before it is recognized.
        A longer filter can help filter out invalid frequencies in noisy environments, but will
        subsequently require the user to play longer tones in order to be recognized.
    </string>
    <string name="manual_voicingselector">
        \nChange voicings with the voicing selector and the app will transpose it to any mode.
        Select a voicing by tapping it, and delete a voicing by holding it.
        Create a new voicing with the <b>New Voicing</b> button.
    </string>
    <string name="parentscale_text_title">Parent Scale</string>
    <string name="save_template">Save</string>
    <string name="cancel_template">Cancel</string>
    <string name="piano_image_description">Displays note heard.</string>
    <string name="new_template_item">New Template</string>
    <string name="mute_button_item">Mute Button</string>
    <string name="splash_img_description">Convergence Lab Logo</string>
</resources>
