<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Example Preference. DELETE WHEN FINISHED. -->
    <android.support.v7.preference.SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="Turn this option on or off"
        android:title="Settings option" />

    <!-- Note Length Filter Setting -->
    <ListPreference
        android:defaultValue="Medium (Default)"
        android:entries="@array/note_length_filter_name_array"
        android:entryValues="@array/note_length_filter_values_array"
        android:key="@string/note_length_filter_key"
        android:summary="@string/note_length_filter_summary"
        android:title="@string/note_length_filter_title" />

</PreferenceScreen>