<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:defaultValue="Ionian (Default)"
        android:entries="@array/sound_mode_names"
        android:entryValues="@array/sound_mode_indices"
        android:key="userModeIx"
        android:summary="@string/user_mode_summary"
        android:title="@string/user_mode_title"
        app:iconSpaceReserved="false" />
    <ListPreference
        android:defaultValue="Choir Aahs"
        android:entries="@array/sound_plugin_names"
        android:entryValues="@array/sound_plugin_indices"
        android:key="userPlugin"
        android:summary="Choose the sound of the drone."
        android:title="Drone Plugin"
        app:iconSpaceReserved="false"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="bassNoteEnabled"
        android:title="@string/root_bass_switch_text"
        android:summary="Play bass note in drone."
        app:iconSpaceReserved="false" />

</PreferenceScreen>