<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    tools:context=".templatecreator.TemplateCreatorActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/template_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/voicing_name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Container for four voicing columns -->
    <LinearLayout
        android:id="@+id/chord_tone_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="30dp"
        android:weightSum="4.2"
        app:layout_constraintTop_toBottomOf="@+id/template_name_edit_text">

        <!-- First column -->
        <LinearLayout
            android:id="@+id/tone_column_0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
        </LinearLayout>

        <!-- Second Column -->
        <LinearLayout
            android:id="@+id/tone_column_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
        </LinearLayout>

        <!-- PaddingColumn -->
        <LinearLayout
            android:id="@+id/tone_column_padding"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:gravity="center"
            android:orientation="vertical">
        </LinearLayout>

        <!-- Third Column -->
        <LinearLayout
            android:id="@+id/tone_column_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
        </LinearLayout>

        <!-- Fourth Column -->
        <LinearLayout
            android:id="@+id/tone_column_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bass_tone_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/chord_tone_container"
        android:paddingTop="30dp"
        android:orientation="horizontal"
        android:weightSum="4">
    </LinearLayout>

    <Button
        android:id="@+id/template_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_template"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/template_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_template"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>