<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DroneSoundActivityExperiment">

    <Switch
        android:id="@+id/root_bass_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/textline_bottom"
        android:paddingStart="@dimen/sound_settings_lr"
        android:paddingLeft="@dimen/sound_settings_lr"
        android:paddingTop="22dp"
        android:paddingEnd="@dimen/sound_settings_lr"
        android:paddingRight="@dimen/sound_settings_lr"
        android:paddingBottom="22dp"
        android:text="@string/root_bass_switch_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/mode_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/sound_settings_lr"
        android:paddingLeft="@dimen/sound_settings_lr"
        android:paddingTop="18dp"
        android:paddingEnd="@dimen/sound_settings_lr"
        android:paddingRight="@dimen/sound_settings_lr"
        android:paddingBottom="18dp"
        android:background="@drawable/textline_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/root_bass_switch"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="131dp">

        <Button
            android:id="@+id/user_mode_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:onClick="getNextMode"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/mode_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_text_title"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/mode_text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mode_text_label"
            android:text=""
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/user_plugin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/sound_settings_lr"
        android:paddingLeft="@dimen/sound_settings_lr"
        android:paddingTop="18dp"
        android:paddingEnd="@dimen/sound_settings_lr"
        android:paddingRight="@dimen/sound_settings_lr"
        android:paddingBottom="18dp"
        android:background="@drawable/textline_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mode_layout"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="131dp">

        <Button
            android:id="@+id/user_plugin_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:onClick="getNextPlugin"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/user_plugin_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_plugin_title"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/user_plugin_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_plugin_label"
            android:text=""
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/user_voicing_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/sound_settings_lr"
        android:paddingLeft="@dimen/sound_settings_lr"
        android:paddingTop="18dp"
        android:paddingEnd="@dimen/sound_settings_lr"
        android:paddingRight="@dimen/sound_settings_lr"
        android:paddingBottom="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_plugin_layout"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="131dp">

        <TextView
            android:id="@+id/user_voicing_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_voicing_label"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <ScrollView
            android:id="@+id/user_voicing_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/user_voicing_label">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>