<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.convergencelab.smartdrone.DroneSoundActivity">


    <RelativeLayout
        android:id="@+id/parentscale_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/sound_settings_lr"
        android:paddingLeft="@dimen/sound_settings_lr"
        android:paddingTop="16dp"
        android:paddingEnd="@dimen/sound_settings_lr"
        android:paddingRight="@dimen/sound_settings_lr"
        android:paddingBottom="16dp"
        android:background="@drawable/textline_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="131dp">

        <Button
            android:id="@+id/user_parentscale_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:onClick="getNextParentScale"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/parentscale_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parentscale_text_title"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/parentscale_text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/parentscale_text_label"
            android:text=""
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mode_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/sound_settings_lr"
        android:paddingLeft="@dimen/sound_settings_lr"
        android:paddingTop="16dp"
        android:paddingEnd="@dimen/sound_settings_lr"
        android:paddingRight="@dimen/sound_settings_lr"
        android:paddingBottom="16dp"
        android:background="@drawable/textline_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/parentscale_layout"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="131dp">

        <Button
            android:id="@+id/user_mode_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:onClick="getNextMode"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/mode_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_text_title"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/mode_text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mode_text_label"
            android:text=""
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/user_plugin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/sound_settings_lr"
        android:paddingLeft="@dimen/sound_settings_lr"
        android:paddingTop="16dp"
        android:paddingEnd="@dimen/sound_settings_lr"
        android:paddingRight="@dimen/sound_settings_lr"
        android:paddingBottom="16dp"
        android:background="@drawable/textline_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mode_layout"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="131dp">

        <Button
            android:id="@+id/user_plugin_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:onClick="getNextPlugin"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/user_plugin_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_plugin_title"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/user_plugin_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_plugin_label"
            android:text=""
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/user_voicing_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/sound_settings_lr"
        android:paddingLeft="@dimen/sound_settings_lr"
        android:paddingTop="16dp"
        android:paddingEnd="@dimen/sound_settings_lr"
        android:paddingRight="@dimen/sound_settings_lr"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_plugin_layout">

        <TextView
            android:id="@+id/user_voicing_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/user_voicing_label"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/new_voicing"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:onClick="openVoicingCreator"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/voicing_scroll_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="@dimen/sound_settings_lr"
        android:paddingLeft="@dimen/sound_settings_lr"
        android:paddingTop="0dp"
        android:paddingEnd="@dimen/sound_settings_lr"
        android:paddingRight="@dimen/sound_settings_lr"
        android:paddingBottom="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_voicing_layout"
        app:layout_constraintBottom_toBottomOf="parent">

        <ScrollView
            android:id="@+id/user_voicing_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/user_voicing_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>